# aws-practice

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
app/: config.py  database.py  main.py
app/routers/: images.py
app/schemas/: image.py
app/services/: s3.py
backend/: .env.example  main.py
backend/alembic/versions/: a66b741b6e19_create_images_table.py
backend/app/: main.py
backend/app/models/: image.py
backend/app/routers/: images.py
backend/app/schemas/: image.py
backend/app/services/: s3.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ImageCard.tsx  ImageDetail.tsx  ImageGallery.tsx  ImageUpload.tsx  S3Explorer.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
